<resources>
  <string name="app">Sanity</string>
  <string name="app_desc">Personal assistant during phone calls.</string>
  <string name="app_shortcut">Sanity - Shortcut</string>
	<string name="ok">Ok</string>
	<string name="activate">Activate</string>
	<string name="addnew">New</string>
	<string name="rename">Rename</string>
	<string name="saveas">Save</string>
	<string name="del">Delete</string>
	<string name="help">Help</string>
	<string name="show">Show</string>
  <string name="groups_cat">Preferences</string>
  <string name="misc_cat">Miscellaneous</string>
  <string name="geek_cat">Under the Hood</string>
  <string name="general_cat">General</string>
  <string name="enabled_title">Enable Sanity</string>
  <string name="enabled_sum">Enable or disable whole Sanity system. If disabled, this application won\'t affect phone calls.</string>
  <string name="silent_limit_title">Silent mode Timeout</string>
  <string name="silent_limit_sum">Each time you activate the Silent mode, Sanity will ask you to choose a timeout for restoring automatically the Normal mode.</string>
  <string name="force_bt_audio_title">Force BT audio</string>
  <string name="force_bt_audio_sum">Force bluetooth audio device to be correctly handled by Sanity.</string>
  <string name="reverse_proximity_title">Reverse proximity</string>
  <string name="reverse_proximity_sum">Check this option only if Sanity enable/disable handsfree or devices in a wrong way when the phone is far/close to your ear.</string>
	<string name="backup_prefs_title">Backup and Restore</string>
	<string name="backup_prefs_sum">Tap here to backup/restore all current preferences to/from memory card.</string>
	<string name="reset_prefs_title">Reset to default</string>
	<string name="reset_prefs_sum">Set default values for all application preferences.</string>
  <string name="delete_filters_title">Delete filters</string>
  <string name="delete_filters_sum">Delete all call filters currently configured.</string>
	<string name="profile_cat">Profiles</string>
	<string name="profile_sum">Manage settings profiles to quickly change more preferences in one fell swoop.</string>
  <string name="devices_cat">Devices</string>
  <string name="devices_sum">Which devices should be enabled or disabled to reduce electromagnetic waves during a call.</string>
  <string name="gps_title">Turn off GPS</string>
  <string name="gps_sum">Disable GPS during a call (it will be restored at call end). It works with many phone models, but not with all.</string>
  <string name="mobdata_title">Turn off Mobile Data</string>
  <string name="mobdata_sum">Disable Mobile Data (2G/3G) during a call (it will be restored at call end). It works with many phone models, but not with all.</string>
  <string name="mobdata_skip_title">Skip Mobile Data if GPS</string>
  <string name="mobdata_skip_sum">Skip automatic Mobile Data (2G/3G) disabling during a call when GPS is enabled.</string>
  <string name="wifi_title">Turn off Wifi</string>
  <string name="wifi_sum">Disable Wifi during a call (it will be restored at call end).</string>
  <string name="bt_title">Turn off Bluetooth</string>
  <string name="bt_sum">Disable Bluetooth during a call (it will be restored at call end).</string>
  <string name="bt_skip_title">Skip BT if connected</string>
  <string name="bt_skip_sum">Skip automatic Bluetooth disabling during a call if there are Bluetooth devices connected to phone.</string>
	<string name="proximity_cat">Proximity</string>
	<string name="proximity_sum">Options for enabling and disabling devices during a call by checking proximity sensor.</string>
  <string name="speaker_cat">Handsfree</string>
  <string name="speaker_sum">Options for automatic handsfree activation.</string>
	<string name="tts_cat">Announce caller</string>
	<string name="tts_enable_title">Enable announce</string>
	<string name="tts_enable_sum">Speak the caller\'s name when a call is received (while the phone rings).</string>
	<string name="tts_global_title">Global settings</string>
	<string name="tts_global_sum">Tap here to open the Android global settings about the \"text to speech\" engine.</string>
	<string name="tts_audio_cat">Audio options</string>
	<string name="tts_headset_title">Headset only</string>
	<string name="tts_headset_sum">Enable announce only if the headsets are connected.</string>
  <string name="tts_skip_title">Skip if silent</string>
	<string name="tts_skip_sum">Don\'t announce the caller when the phone is in silent mode.</string>
	<string name="tts_solo_title">Mute ringtone</string>
	<string name="tts_solo_sum">Mute the ringtone when announcing the caller\'s name.</string>
	<string name="tts_vol_title">Announcement volume</string>
	<string name="tts_vol_sum">Choose the volume level used to announce calls.</string>
	<string name="tts_tone_title">Voice tone</string>
	<string name="tts_tone_sum">Choose the voice tone for announcing the caller\'s name.</string>
	<string name="tts_how_cat">Repeat and pause the announce</string>
	<string name="tts_repeat_title">Repeat</string>
	<string name="tts_repeat_sum">How many times the caller\'s name will be spoken when ringing.</string>
	<string name="tts_pause_title">Pause between repeats</string>
	<string name="tts_pause_sum">How long to wait before announcing again the caller\'s name.</string>
	<string name="tts_what_cat">What to announce</string>
	<string name="tts_prefix_title">Prefix</string>
	<string name="tts_prefix_sum">Choose what to speak BEFORE the caller\'s name.</string>
	<string name="tts_suffix_title">Suffix</string>
	<string name="tts_suffix_sum">Choose what to speak AFTER the caller\'s name.</string>
	<string name="tts_anonym_title">Anonymous</string>
	<string name="tts_anonym_sum">Type the word \"Anonymous\" in your language to announce anonymous calls.</string>
	<string name="tts_unknown_title">Unknown</string>
	<string name="tts_unknown_sum">Type the word \"Unknown\" in your language to announce caller is not in contacts.</string>
	<string name="tts_stream_title">Alternate audio</string>
	<string name="tts_stream_sum">Use an alternate audio stream for announcing. Enable this option only if you cannot hear the announcement (try it hereunder).</string>
	<string name="tts_test_title">Test</string>
	<string name="tts_test_sum">Tap here to try announcing using current options.</string>
	<string name="ttsms_cat">Announce sender of SMS</string>
	<string name="ttsms_title">Enable announce SMS</string>
	<string name="ttsms_sum">Speak the name of the sender when receiving a SMS (only the sender\'s name is announced, NOT the message content).</string>
	<string name="ttsms_vol_title">SMS Volume</string>
	<string name="ttsms_vol_sum">Choose the volume level used to announce SMS.</string>
	<string name="ttsms_prefix_title">Prefix (SMS)</string>
	<string name="ttsms_prefix_sum">Choose what to speak BEFORE the sender\'s name.</string>
	<string name="ttsms_suffix_title">Suffix (SMS)</string>
	<string name="ttsms_suffix_sum">Choose what to speak AFTER the sender\'s name.</string>
	<string name="ttsms_shared_title">Shared filter (TTS)</string>
	<string name="ttsms_shared_sum">If activated, use the filter of the call announcer. Otherwise you can choose a specific filter to announce SMS.</string>
	<string name="vol_cat">Volume</string>
	<string name="vol_sum">Options for automatic volume setting during a call.</string>
	<string name="vol_phone_title">Phone volume</string>
	<string name="vol_phone_sum">Volume to automatically set during a call while no headsets are used.</string>
	<string name="vol_wired_title">Wired headsets</string>
	<string name="vol_wired_sum">Volume to automatically set during a call while using wired headsets.</string>
	<string name="vol_bt_title">Bluetooth headsets</string>
	<string name="vol_bt_sum">Volume to automatically set during a call while using wireless headsets.</string>
	<string name="vol_solo_title">Conversation only</string>
	<string name="vol_solo_sum">Play only the audio of the conversation, muting any other audio stream during phone calls.</string>
  <string name="notify_cat">Notification</string>
  <string name="notify_sum">Choose when Sanity should show notifications.</string>
  <string name="notify_disable_title">Notify turning off</string>
  <string name="notify_disable_sum">Notify when devices are automatically turned off by Sanity.</string>
  <string name="notify_enable_title">Notify restoring</string>
  <string name="notify_enable_sum">Notify when devices are automatically restored by Sanity.</string>
  <string name="notify_activity_title">Notify running</string>
  <string name="notify_activity_sum">Notify if Sanity is running when a phone call starts.</string>
  <string name="notify_volume_title">Notify volume</string>
  <string name="notify_volume_sum">Notify when volume is automatically changed by Sanity.</string>
  <string name="about_cat">About and contacts</string>
  <string name="about_sum">Information about this application and tools for contacting the developer.</string>
  <string name="changelog_title">Recent changes</string>
  <string name="changelog_sum">Show recent changes about last Sanity versions.</string>
  <string name="mail_title">Mail to developer</string>
  <string name="mail_sum">Tap here to write an email to the developer. Use the FORUM for any question about Sanity!</string>
  <string name="comment_title">Leave a comment</string>
  <string name="comment_sum">You are invited to leave a comment about Sanity on Market. Tap here to open Market. Please don\'t report bugs in Market comments.</string>
  <string name="eula_title">License GNU GPL v3</string>
  <string name="eula_sum">Tap here to open the official web site of the GNU General Public License version 3.</string>
  <string name="paypal_title">PayPal donate</string>
  <string name="paypal_sum">In addition to Market, you can donate using PayPal. Once you complete the donation, the author will send you the donation version. Tap here to open the PayPal site.</string>
	<string name="filter_cat">Call filter</string>
	<string name="filter_enable_title">Enable filtering</string>
	<string name="filter_enable_sum">Enable phone number filtering.</string>
	<string name="filter_mode_title">Filter mode</string>
	<string name="filter_mode_sum">Choose to include or exclude the phone numbers in the following list.</string>
	<string name="filter_list_cat">List of phone numbers</string>
	<string name="filter_all_title">All numbers</string>
	<string name="filter_all_sum">All phone numbers.</string>
	<string name="filter_anonym_title">Anonymous</string>
	<string name="filter_anonym_sum">All anonymous phone numbers.</string>
	<string name="filter_unknown_title">All unknowns</string>
	<string name="filter_unknown_sum">All non-anonymous unknown phone numbers (don\'t stored  in contacts).</string>
	<string name="filter_nums_title">User list</string>
	<string name="filter_nums_sum">List of phone numbers don\'t stored in contacts.</string>
	<string name="filter_allcontacts_title">All contacts</string>
	<string name="filter_allcontacts_sum">All phone numbers in contacts.</string>
	<string name="filter_contacts_title">Contacts list</string>
	<string name="filter_contacts_sum">Choose the phone contacts in this list.</string>
	<string name="filter_star_title">All favourites</string>
	<string name="filter_star_sum">All contacts you tagged as favourites.</string>
	<string name="filter_groups_title">Groups list</string>
	<string name="filter_groups_sum">Choose the groups of contacts in this list.</string>
	<string name="filter_prefix_title">Prefixes</string>
	<string name="filter_prefix_sum">Choose the phone number prefixes in this list.</string>
	<string name="filter_dt_title">Date and time</string>
	<string name="filter_dt_sum">Choose when this filter should be enabled.</string>
  <string name="donate_title">Donate</string>
  <string name="donate_sum">Sanity is free. If you like this application, support the development with a donation.</string>
</resources>