<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <Preference android:key="logo" />

	<PreferenceCategory android:title="@string/general_cat">
    <CheckBoxPreference android:title="@string/enabled_title"
                        android:summary="@string/enabled_sum"
                        android:key="enabled" />
    <CheckBoxPreference android:title="@string/silent_limit_title"
                        android:summary="@string/silent_limit_sum"
                        android:dependency="enabled"
                        android:key="silent_limit" />
    <CheckBoxPreference android:title="@string/force_bt_audio_title"
                        android:summary="@string/force_bt_audio_sum"
                        android:dependency="enabled"
                        android:key="force_bt_audio" />
    <CheckBoxPreference android:title="@string/reverse_proximity_title"
                        android:summary="@string/reverse_proximity_sum"
                        android:dependency="enabled"
                        android:key="reverse_proximity" />
    <Preference android:title="@string/profile_cat"
                android:summary="@string/profile_sum"
                android:widgetLayout="@layout/img_profiles"
                android:persistent="false"
                android:key="profile" />
    <Preference android:title="@string/backup_prefs_title"
                android:summary="@string/backup_prefs_sum"
                android:widgetLayout="@layout/img_backup"
                android:persistent="false"
                android:key="backup_prefs" />
    <Preference android:title="@string/delete_filters_title"
                android:summary="@string/delete_filters_sum"
                android:persistent="false"
                android:key="delete_filters" />
    <Preference android:title="@string/reset_prefs_title"
                android:summary="@string/reset_prefs_sum"
                android:persistent="false"
                android:key="reset_prefs" />
	</PreferenceCategory>
</PreferenceScreen>
