<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference android:key="logo" />
	<PreferenceCategory android:title="@string/about_cat">
		<Preference android:title="@string/changelog_title"
	  	          android:summary="@string/changelog_sum"
	  	          android:persistent="false"
	  	          android:key="changelog" />
    <Preference android:title="@string/mail_title"
                android:summary="@string/mail_sum"
	              android:persistent="false"
                android:key="mail" />
    <Preference android:title="@string/comment_title"
                android:summary="@string/comment_sum"
	              android:persistent="false"
                android:key="comment" />
    <Preference android:title="@string/eula_title"
                android:summary="@string/eula_sum"
	              android:persistent="false"
                android:key="eula" />
    <Preference android:title="@string/paypal_title"
                android:summary="@string/paypal_sum"
	              android:persistent="false"
                android:key="paypal" />
	</PreferenceCategory>
</PreferenceScreen>
