<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference android:key="logo" />
	<PreferenceCategory android:title="@string/vol_cat">
	  <cri.sanity.pref.PList android:title="@string/vol_phone_title"
	                         android:summary="@string/vol_phone_sum"
	                         android:key="vol_phone_s" />
	  <cri.sanity.pref.PList android:title="@string/vol_wired_title"
	                         android:summary="@string/vol_wired_sum"
	                         android:key="vol_wired_s" />
	  <cri.sanity.pref.PList android:title="@string/vol_bt_title"
	                         android:summary="@string/vol_bt_sum"
	                         android:key="vol_bt_s" />
	  <CheckBoxPreference android:title="@string/vol_solo_title"
	                      android:summary="@string/vol_solo_sum"
	                      android:key="vol_solo" />
	</PreferenceCategory>
</PreferenceScreen>
