<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference android:key="logo" />
	<PreferenceCategory android:title="@string/notify_cat">
	  <CheckBoxPreference android:title="@string/notify_disable_title"
	                      android:summary="@string/notify_disable_sum"
	                      android:key="notify_disable" />
	  <CheckBoxPreference android:title="@string/notify_enable_title"
	                      android:summary="@string/notify_enable_sum"
	                      android:key="notify_enable" />
	  <CheckBoxPreference android:title="@string/notify_activity_title"
	                      android:summary="@string/notify_activity_sum"
	                      android:key="notify_activity" />
	  <CheckBoxPreference android:title="@string/notify_volume_title"
	                      android:summary="@string/notify_volume_sum"
	                      android:key="notify_volume" />
	</PreferenceCategory>
</PreferenceScreen>
