<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_general" android:icon="@drawable/menu_general" android:title="@string/general_cat" />
	<item android:id="@+id/menu_devices" android:icon="@drawable/menu_devices" android:title="@string/devices_cat" />
	<item android:id="@+id/menu_proximity" android:icon="@drawable/menu_proximity" android:title="@string/proximity_cat" />
	<item android:id="@+id/menu_speaker" android:icon="@drawable/menu_speaker" android:title="@string/speaker_cat" />
	<item android:id="@+id/menu_vol" android:icon="@drawable/menu_vol" android:title="@string/vol_cat" />
	<item android:id="@+id/menu_notify" android:icon="@drawable/menu_notify" android:title="@string/notify_cat" />
	<item android:id="@+id/menu_about" android:icon="@drawable/menu_about" android:title="@string/about_cat" />
</menu>
